--- a/.gitignore
+++ b/.gitignore
@@ -135,7 +135,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .envrc
 .venv
 env/
@@ -205,3 +204,137 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# =============================================================================
+# Project-Specific Ignores
+# =============================================================================
+
+# Environment Variables
+.env
+.env.local
+.env.production
+.env.development
+.env.test
+.env.*.local
+.envrc
+
+# Node.js / Frontend
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+frontend/node_modules/
+frontend/.next/
+frontend/out/
+frontend/build/
+frontend/dist/
+frontend/.cache/
+frontend/.turbo/
+
+# OS Files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+# IDE / Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+*.sublime-project
+*.sublime-workspace
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+*.db-journal
+postgres_data/
+pgdata/
+*.dump
+*.sql.backup
+
+# Docker
+docker-compose.override.yml
+.dockerignore.local
+
+# Logs
+logs/
+*.log
+*.log.*
+log/
+backend/logs/
+backend/*.log
+
+# Alembic (keep migrations, ignore temp files)
+alembic/versions/*.pyc
+alembic/versions/__pycache__/
+
+# Test Artifacts
+.pytest_cache/
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.hypothesis/
+test-results/
+coverage.xml
+*.cover
+.hypothesis/
+
+# Temporary Files
+tmp/
+temp/
+*.tmp
+*.bak
+*.swp
+*.swo
+*~
+.cache/
+
+# Railway / Deployment
+.railway/
+railway.json.local
+
+# Python Virtual Environments (additional)
+venv/
+ENV/
+env/
+.venv/
+virtualenv/
+
+# Jupyter Notebook Checkpoints
+.ipynb_checkpoints/
+
+# MyPy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Type Checkers
+.pytype/
+.pyre/
+
+# Local Configuration
+local_settings.py
+local_config.py
+config.local.py
+
+# Backup Files
+*.bak
+*.backup
+*~
+
+# Cursor-specific (keep .cursorignore but ignore indexing files)
+.cursorindexingignore
+.cursor-git-refresh
