--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,22 @@
 # Use Node.js 20 Alpine as base image
-FROM node:20-alpine
+FROM node:20-alpine AS base
 
+# Install dependencies only when needed
+FROM base AS deps
 WORKDIR /app
 
-# Copy package files first for better caching
+# Copy package files
 COPY package.json ./
 
 # Install dependencies
 RUN npm install
+
+# Rebuild the source code only when needed
+FROM base AS builder
+WORKDIR /app
+
+# Copy dependencies from deps stage
+COPY --from=deps /app/node_modules ./node_modules
 
 # Copy all source files
 COPY . .
@@ -15,13 +24,27 @@ COPY . .
 # Build the Next.js application
 RUN npm run build
 
-# Expose the port Next.js runs on
-EXPOSE 3000
+# Production image
+FROM base AS runner
+WORKDIR /app
 
-# Set environment variables
 ENV NODE_ENV=production
 ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
 
+# Create non-root user
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
+
+# Copy built application
+COPY --from=builder /app/public ./public
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+
+USER nextjs
+
+# Expose the port Next.js runs on
+EXPOSE 3000
+
 # Start the Next.js server
-CMD ["npm", "start"]
+CMD ["node", "server.js"]
