Fix: Add lib/api module and update gitignore
- Add frontend/lib/api/index.ts with authApi and chatApi
- Update .gitignore to allow frontend/lib/api/ directory
- Fixes Railway build error: Cannot find module '@/lib/api'

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,12 @@ dist/
 downloads/
 eggs/
 .eggs/
+# Exception: Allow frontend/lib/api (our API module)
+!frontend/lib/api/
 lib/
 lib64/
+# Exception: Allow frontend/lib/api (our API module)
+!frontend/lib/api/
 parts/
 sdist/
 var/
