--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,12 +6,10 @@ FROM base AS deps
 WORKDIR /app
 
 # Copy package files
-COPY package.json ./
-COPY package-lock.json* ./
+COPY package.json package-lock.json ./
 
 # Install dependencies
-# Use npm ci if package-lock.json exists, otherwise fall back to npm install
-RUN if [ -f package-lock.json ]; then npm ci; else npm install; fi
+RUN npm ci
 
 # Rebuild the source code only when needed
 FROM base AS builder
