Fix: Remove wildcard from builder stage package-lock.json copy
- Ensure package-lock.json is required in both deps and builder stages
- Consistent behavior across all Docker stages

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,7 +19,7 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 
 # Copy package files
-COPY package.json package-lock.json* ./
+COPY package.json package-lock.json ./
 
 # Copy all source files
 COPY . .
