--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -40,7 +40,7 @@ RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
 # Copy built application from standalone output
-COPY --from=builder /app/public ./public
+# Next.js standalone includes public files in .next/standalone/public
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
