Fix: Add public directory and update Dockerfile
- Create empty public directory with .gitkeep
- Copy public directory in Dockerfile (required for Next.js standalone)
- Fixes Railway build error: /app/public not found

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -40,9 +40,10 @@ RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
 # Copy built application from standalone output
-# Next.js standalone includes public files in .next/standalone/public
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+# Copy public directory if it exists (Next.js standalone doesn't include it automatically)
+COPY --from=builder --chown=nextjs:nodejs /app/public* ./public/ 2>/dev/null || true
 
 USER nextjs
 
