--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -47,6 +47,7 @@ pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
 httpx-sse==0.3.1  # For testing SSE endpoints
+aiosqlite==0.19.0  # For async SQLite testing
 
 # Development
 black==23.11.0
