Fix build error: Add lib/api.ts and fix path alias resolution
- Fix .gitignore to allow frontend/lib/ directory
- Add frontend/lib/api.ts to git tracking
- Improve webpack alias configuration in next.config.js
- Fixes Module not found error for @/lib/api in Docker build

--- a/.gitignore
+++ b/.gitignore
@@ -14,12 +14,10 @@ dist/
 downloads/
 eggs/
 .eggs/
-# Exception: Allow frontend/lib/api (our API module)
-!frontend/lib/api/
+# Exception: Allow frontend/lib directory (contains API module)
+!frontend/lib/
 lib/
 lib64/
-# Exception: Allow frontend/lib/api (our API module)
-!frontend/lib/api/
 parts/
 sdist/
 var/
