--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -26,10 +26,8 @@ COPY . .
 
 # Set build-time environment variables (if needed)
 # NEXT_PUBLIC_* variables must be available at build time
-ARG NEXT_PUBLIC_API_URL
-ARG NEXT_PUBLIC_WS_URL
-ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
-ENV NEXT_PUBLIC_WS_URL=$NEXT_PUBLIC_WS_URL
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+ENV NEXT_PUBLIC_WS_URL=${NEXT_PUBLIC_WS_URL}
 
 # Build the Next.js application
 RUN npm run build
