Added fixes for Railway frontend deployment

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ eggs/
 .eggs/
 # Exception: Allow frontend/lib directory (contains API module)
 !frontend/lib/
+!frontend/lib/**
 lib/
 lib64/
 parts/
