--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -28,8 +28,8 @@ COPY . .
 # NEXT_PUBLIC_* variables must be available at build time
 ARG NEXT_PUBLIC_API_URL
 ARG NEXT_PUBLIC_WS_URL
-ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
-ENV NEXT_PUBLIC_WS_URL=$NEXT_PUBLIC_WS_URL
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+ENV NEXT_PUBLIC_WS_URL=${NEXT_PUBLIC_WS_URL}
 
 
 # Debug info (temporary)
